test/samples/invalid/tc/map2.maruir
fun testPrimitiveMap()
locals m: u256[] *#memory;
{
    entry:
        m := alloc map(u256, u256) in #memory;
        return;
}
